# kinstaller-repo

./: .gitignore  .gitmodules  Dockerfile  README.md  build.sh  manifest.json
.github/workflows/: publish.yml  rebuild-packages.yml
apps/: README.md
apps/com.bd452.demo/: README.md  build.sh
apps/com.bd452.demo/package/: app.sh  install.sh  launch.sh  manifest.json  uninstall.sh
apps/com.bd452.demo/scripts/: make-icon.py
apps/com.bd452.fbink/: README.md  build.sh
apps/com.bd452.fbink/package/: install.sh  manifest.json  uninstall.sh
apps/com.bd452.ksubstrate/: README.md  build.sh
apps/com.bd452.ksubstrate/package/: app.sh  install.sh  launch.sh  manifest.json  uninstall.sh
apps/com.bd452.ksubstrate/package/diagnostics/com.bd452.ksubstrateprobe/: tweak.ksfilter
apps/com.bd452.ksubstratedemo/: README.md  build.sh
apps/com.bd452.ksubstratedemo/package/: app.sh  install.sh  launch.sh  manifest.json  uninstall.sh
apps/com.bd452.ksubstratedemo/package/tweaks/com.bd452.ksubstratedemo/: manifest.json  tweak.ksfilter
apps/com.bd452.signalkit/: README.md  build.sh
apps/com.bd452.signalkit/package/: install.sh  manifest.json
apps/com.bd452.signalkitdemo/: README.md  build.sh
apps/com.bd452.signalkitdemo/package/: app.sh  install.sh  launch.sh  manifest.json  uninstall.sh
apps/com.bd452.signalkitdemo/scripts/: make-icon.py
docs/: artifact-first-architecture.md  kindle-substrate-divergence.md  kindle-substrate.md
index_builder/: build_index.py  config.toml  requirements.txt
index_builder/templates/: index.html
registry/sources/: ember-v0.1.1.json  kindle-fbink-kpm-v1.25.1.json  kindle-substrate-v0.1.7.json  legacy-com.bd452.demo.json  legacy-com.bd452.ember.json  legacy-com.bd452.emberdemo.json  legacy-com.bd452.fbink.json  legacy-com.bd452.ksubstrate.json  legacy-com.bd452.ksubstratedemo.json
rust/: Cargo.toml  README.md
rust/.cargo/: config.toml
rust/dobby-sys/: Cargo.toml  build.rs
rust/dobby-sys/src/: lib.rs
rust/fbink-sys/: Cargo.toml  build.rs
rust/fbink-sys/src/: lib.rs
rust/kindle-compat/: Cargo.toml
rust/kindle-compat/src/: lib.rs
rust/ksub/: Cargo.toml
rust/ksub-logos/: Cargo.toml
rust/ksub-logos/src/: main.rs
rust/ksub-syms/: Cargo.toml
rust/ksub-syms/src/: lib.rs
rust/ksub/src/: main.rs
rust/ksubstrate/: Cargo.toml  build.rs
rust/ksubstrate-bootstrap/: Cargo.toml
rust/ksubstrate-bootstrap/src/: lib.rs
rust/ksubstrate-cli/: Cargo.toml
rust/ksubstrate-cli/src/: main.rs
rust/ksubstrate-demo-target/: Cargo.toml  build.rs
rust/ksubstrate-demo-target/src/: main.rs
rust/ksubstrate-probe-tweak/: Cargo.toml  build.rs  manifest.json
rust/ksubstrate-probe-tweak/src/: lib.rs
rust/ksubstrate-sample-tweak/: Cargo.toml
rust/ksubstrate-sample-tweak/src/: lib.rs
rust/ksubstrate/include/: ksubstrate.h
rust/ksubstrate/src/: backend.rs  lib.rs  plt.rs
rust/ksubstrated/: Cargo.toml
rust/ksubstrated/src/: main.rs
rust/signalkit/: Cargo.toml  README.md  cbindgen.toml
rust/signalkit-demo/: Cargo.toml  README.md
rust/signalkit-demo/src/: main.rs
rust/signalkit/docs/: README.md  building.md  c-abi.md  concepts.md  device.md  usage.md
rust/signalkit/include/: signalkit.h
rust/signalkit/src/: app.rs  component.rs  disposable.rs  ffi.rs  geometry.rs  layout.rs  lib.rs  lifecycle.rs  node.rs  signal.rs
rust/signalkit/src/input/: evdev.rs  mod.rs
rust/signalkit/src/render/: fbink.rs  mock.rs  mod.rs
rust/signalkit/src/structural/: for_each.rs  mod.rs  slot.rs
rust/signalkit/src/widget/: button.rs  label.rs  mod.rs  spacer.rs  stack.rs
scripts/: build-in-container.sh  build-registry.sh  build-repo.sh  fetch-kpm-helper.sh  koxtoolchain.sh  kpm-dev  pack-app.sh  pack_kpkg.py  patch-kpm-helper.py  prepare-release.sh  reset-repo-packages.py  run-signalkit-demo-on-kindle.sh  setup-koxtoolchain.sh  stage-site.sh  sync-crate-version.py  update-packages.sh  verify-pinned-artifacts.py
