[workspace]
resolver = "2"
members = [
    "fbink-sys",
    "signalkit",
    "signalkit-demo",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bryce"]
license = "MIT"

[workspace.dependencies]
libc = "0.2"

# Small binaries for space-constrained Kindle storage. panic = "unwind" is
# required: the C ABI (signalkit/src/ffi.rs) relies on catch_unwind at the
# boundary so a Rust panic never unwinds into foreign frames.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "unwind"
