[package]
name = "signalkit-demo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "On-device demo exercising SignalKit (counter, list, exit)."

[[bin]]
name = "signalkit-demo"
path = "src/main.rs"

[features]
# The device build enables FBInk (and thus the real event loop). Without it the
# binary builds a host stub, so `cargo check` works on macOS/CI with no toolchain.
default = []
fbink = ["signalkit/fbink"]

[dependencies]
signalkit = { path = "../signalkit" }
