[package]
name = "signalkit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Reactive UI framework for Kindle e-readers — a Rust port of SignalKit."

[lib]
# rlib for native Rust consumers (the demo); cdylib + C ABI for other compiled
# languages (built with --features capi on-device).
crate-type = ["rlib", "cdylib"]

[features]
default = []
# Enables the FBInk framebuffer backend (render/fbink.rs) and the on-device
# input + event loop. Off by default so host `cargo test` needs no cross
# toolchain or vendored FBInk source.
fbink = ["dep:fbink-sys"]
# Enables the C ABI in ffi.rs. Pure Rust — safe to build/test on the host.
capi = []

[dependencies]
fbink-sys = { path = "../fbink-sys", optional = true }
